mas tipos, arrays, tuplas, enum

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     
-    <script src="tipos/numbers.js"></script>
+    <script src="tipos/tuples.js"></script>
 
 </body>
 </html>
