--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     
-    <script src="tipos/null-undefined.js"></script>
+    <script src="funciones/args-optional.js"></script>
 
 </body>
 </html>
